# django-startapp-template

./: .env.dist  .env.example  .gitignore  .pre-commit-config.yaml  README.md  hello.py  pyproject.toml  ruff.toml
apps/core/abstracts/: models.py
config/: api_urls.py  celery.py  settings.py  urls.py
