[project]
name = "django-startapp-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1.5",
    "django-filter>=24.3",
    "django-silk>=5.3.2",
    "djangorestframework>=3.15.2",
    "markdown>=3.7",
    "pre-commit>=4.1.0",
    "python-decouple>=3.8",
]

[dependency-groups]
dev = [
    "ruff>=0.9.4",
]
